# ChangeLog for gnome-base/gvfs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.23 2008/09/01 12:22:51 remi Exp $

  01 Sep 2008; Rémi Cardona <remi@gentoo.org> gvfs-0.2.5-r2.ebuild:
  better bash completion code (same as in the gnome overlay)

*gvfs-0.2.5-r2 (20 Aug 2008)

  20 Aug 2008; Rémi Cardona <remi@gentoo.org>
  +files/gvfs-0.2.5-bash-completion.patch, +gvfs-0.2.5-r2.ebuild:
  fix location of bash-completion script (see bug #219442)

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> gvfs-0.2.5.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> gvfs-0.2.5.ebuild:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> gvfs-0.2.5-r1.ebuild:
  Marking gvfs-0.2.5-r1 ppc stable for bug 229709

  29 Jul 2008; nixnut <nixnut@gentoo.org> gvfs-0.2.5-r1.ebuild:
  Added ~ppc

  28 Jul 2008; Arun Raghavan <ford_prefect@gentoo.org> metadata.xml:
  Add local USE flags to metadata.xml

  26 Jul 2008; Olivier Crête <tester@gentoo.org> gvfs-0.2.5.ebuild:
  Stable on amd64, bug #229709

  26 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org> -gvfs-0.2.1.ebuild,
  -gvfs-0.2.2.ebuild, gvfs-0.2.3.ebuild, -gvfs-0.2.4.ebuild,
  gvfs-0.2.5.ebuild, +gvfs-0.2.5.ebuild:
  remove old revisions, drop bluetooth use flag on version to stabilize but
  keep the feature in r1.

*gvfs-0.2.5 (30 Jun 2008)

  30 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-0.2.5.ebuild:
  bump to 0.2.5,
   * Fix unremovable files in trash (#523139).
   * Fix recursive copy of directories (#522933).

  01 Jun 2008; nixnut <nixnut@gentoo.org> gvfs-0.2.3.ebuild:
  Added ~ppc wrt bug 218794

*gvfs-0.2.4 (27 May 2008)

  27 May 2008; Rémi Cardona <remi@gentoo.org> +gvfs-0.2.4.ebuild:
  bump to 0.2.4, bugfix release

  12 May 2008; Jeroen Roovers <jer@gentoo.org> gvfs-0.2.3.ebuild:
  Marked ~hppa (bug #218794).
