@@ -1,9 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gvfs-0.2.5-bash-completion.patch 2002 RMD160 4be918587bf2e5ed0a05c8aaaca86e38fcc63cd6 SHA1 620b3e22d6b2e0558f632cc1962d95695458ff1a SHA256 04b247915f396734b29398a611d078a972b33a085c53766a56d0053797961fc4
-DIST gvfs-0.2.3.tar.bz2 830289 RMD160 41c35159d5b72ae38ee47922ffe8b7f90d153c2b SHA1 9b2a73b4d0edf77a623eeda001f634f11d8ea74b SHA256 27d73ba99f71d01d306887a19535a3384e9e374db5231f8f7eb2918f8eb0f877
 DIST gvfs-0.2.5.tar.bz2 826404 RMD160 f1b403c859ce91a5620ca16067d225f8a733857f SHA1 b92b27792fe711319f9f0bba678dc9c074cb5b97 SHA256 f8bb3d32b1fe797190b9d8f2a6b0cdf91e897326a26cf8d9583e41f0d3aae86b
-EBUILD gvfs-0.2.3.ebuild 1724 RMD160 ee5861b66bb2ae9d3a20a376fe0f9e295806402f SHA1 0d93196f98903d4fbeb11f80f0cc5430fdafc2fc SHA256 f5779d15a79f8d4265d0c3de39d0f86d7b83f28ef54ebeed831efa1f8ec8a0e2
-EBUILD gvfs-0.2.5-r1.ebuild 1729 RMD160 653a5360074c564ca0ed2cbc9832ad45bb4bdb86 SHA1 25cbfe5bb40a464fd10b0b6de42c91411d540677 SHA256 27dcf4f6555eeeb77da30b74a8a73e415624b6c337f9f4eba68ea716e4a805e8
-EBUILD gvfs-0.2.5-r2.ebuild 2107 RMD160 d6b043f02de37063c471c4779a139333c2370a57 SHA1 8a31ae91c260121f0ad335330975e52e670f0bae SHA256 73268f5ef086007be2941eb0962471b3429d582031b6f7d92c1c1ddbb2bcb476
-EBUILD gvfs-0.2.5.ebuild 1599 RMD160 92770ad97a4435d47d00947041efff816f7a10b4 SHA1 62a8bf725dfabefb7fd04547a7157deeffbea8e5 SHA256 65bd059a5fa92297735f61edf740f090997f4314cb59174c6ad380796d3d93f4
-MISC ChangeLog 3310 RMD160 d655627c6266d0220c3c922e717c79f461338097 SHA1 051f3bce913aeb536f81fa266d7ec116bb85b0db SHA256 5e54a5c44bde0698442797972a766de32969fc85ec6ddbf9839107cf236d77ea
+EBUILD gvfs-0.2.5-r1.ebuild 1747 RMD160 56311f58394c9e55f46602e11e295612572fb4dd SHA1 d40b799de17e131210d9caf2e860970f74c795f1 SHA256 15c6497bc37592e77610884ccb113937510a96cc81d3b5407d4fae41ca36887b
+EBUILD gvfs-0.2.5-r2.ebuild 2127 RMD160 a371d2e751ee863d789a083528544283a5edc999 SHA1 69961f7863114b1ca133f4f44add6547af37833d SHA256 e963a0fe28146d468b024bf164a8dd3740f89b58ed9cf6659b30087271924975
+EBUILD gvfs-0.2.5.ebuild 1616 RMD160 47492821dfc48a59a56463f55687c080b1c33a54 SHA1 e4504e8a51db9f7dbf926951f9a5b06530e1ffb8 SHA256 f532bcf863a9a8f2cf865c29dbf6a65d79ae03d842650487c26dc191d7a1cc9e
+MISC ChangeLog 3496 RMD160 318207416b7db06aad4b1c9b67a909f5213beaf1 SHA1 4461f7465418b2565f8b58083858e59478641594 SHA256 9d0982c3e4bca4f8fedcf0abb4c9add9d5a0e71359e58faca5f38156dd44132f
 MISC metadata.xml 736 RMD160 b47be7b5fc5ed00a4e1682f0cdf025eb6af277b3 SHA1 4b9e5e748d8dcc21f950ce8f76bce7d529129c96 SHA256 1079af8695ba6f4e7b8216f76ae1d01c209f7484798530639beea1cc216d34ef
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkjEWc4ACgkQ1fmVwcYIWAbX3wCdHlShz9c1kBaByV6lxBtyWl60
+QzoAoOcZy952/kH4YXxYc92LxnjCWoZP
+=My8M
+-----END PGP SIGNATURE-----
