@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/Attic/gvfs-0.2.5-r1.ebuild,v 1.3 2008/07/30 22:12:26 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/Attic/gvfs-0.2.5-r1.ebuild,v 1.4 2008/09/07 22:46:33 eva Exp $
 
 inherit gnome2 eutils
 
@@ -43,6 +43,7 @@ DOCS="AUTHORS ChangeLog NEWS README TODO"
 pkg_setup() {
 	G2CONF="${G2CONF}
 			--enable-http
+			--disable-archive
 			$(use_enable avahi)
 			$(use_enable bluetooth obexftp)
 			$(use_enable cdda)
