@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/Attic/gvfs-0.2.5.ebuild,v 1.5 2008/08/12 13:34:06 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/Attic/gvfs-0.2.5.ebuild,v 1.6 2008/09/07 22:46:33 eva Exp $
 
 inherit gnome2 eutils
 
@@ -39,6 +39,7 @@ pkg_setup() {
 	G2CONF="${G2CONF}
 			--enable-http
 			--disable-obexftp
+			--disable-archive
 			$(use_enable avahi)
 			$(use_enable cdda)
 			$(use_enable fuse)
