@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.23 2008/09/01 12:22:51 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.24 2008/09/07 22:46:33 eva Exp $
+
+  07 Sep 2008; Gilles Dartiguelongue <eva@gentoo.org> -gvfs-0.2.3.ebuild,
+  gvfs-0.2.5.ebuild, gvfs-0.2.5-r1.ebuild, gvfs-0.2.5-r2.ebuild:
+  disable libarchive support, fix bug #234366.
 
   01 Sep 2008; Rémi Cardona <remi@gentoo.org> gvfs-0.2.5-r2.ebuild:
   better bash completion code (same as in the gnome overlay)
